--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
 
-    <h1>Banking App</h1>
+    <h1>SapphireBank</h1>
 
     <nav>
         <button onclick="showSection('viewUsers')">View Users</button>
         <button onclick="showSection('createUser')">Create User</button>
+        <button onclick="showSection('editUser')">Edit User</button>
         <button onclick="showSection('transactions')">Transactions</button>
         <button onclick="showSection('expenses')">Expenses</button>
     </nav>
@@ -26,6 +27,8 @@
                     <th>Name</th>
                     <th>Email</th>
                     <th>Balance</th>
+                    <th>Edit</th>
+                    <th>Deactivate</th>
                 </tr>
             </thead>
             <tbody id="usersList">
@@ -41,7 +44,16 @@
         <input type="text" id="name" placeholder="Name" required>
         <input type="email" id="email" placeholder="Email" required>
         <input type="password" id="password" placeholder="Password" required>
-        <button onclick="createUser()">Create User</button>
+        <button id="createUserButton" onclick="createUser()">Create User</button>
+    </div>
+
+    <!-- Edit User Section -->
+    <div id="editUser" class="section">
+        <h2>Edit User</h2>
+        <select id="editUserDropdown"></select>
+        <input type="text" id="editName" placeholder="New Name">
+        <input type="email" id="editEmail" placeholder="New Email">
+        <button onclick="editUser()">Edit User</button>
     </div>
 
     <!-- Transactions Section -->
@@ -78,6 +90,8 @@
             <ul id="expensesList"></ul>
         </div>
     </div>
+
+    <div id="notificationContainer"></div>
 
     <script src="script.js"></script>
 </body>
