Edited Bank Functions

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <th>Name</th>
                     <th>Email</th>
                     <th>Balance</th>
-                    <th>Edit</th>
+                    <!-- <th>Edit</th> -->
                     <th>Deactivate</th>
                 </tr>
             </thead>
