--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button id="myBudget" onclick="handleButtonClick()">MY BUDGET</button>
 
     <h1>SapphireBank</h1>
 
@@ -95,8 +96,6 @@
         <tbody></tbody>
     </table>
 </div>
-
-
 
     <!-- Expenses Section -->
     <div id="expenses" class="section">
