--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <button id="myBudget" onclick="handleButtonClick()">MY BUDGET</button>
-
+    
     <h1>SapphireBank</h1>
 
     <nav>
@@ -97,6 +97,8 @@
     </table>
 </div>
 
+
+
     <!-- Expenses Section -->
     <div id="expenses" class="section">
         <h2>Expense Tracker</h2>
@@ -112,6 +114,8 @@
     </div>
 
     <div id="notificationContainer"></div>
+    <div id="notification" class="notification"></div>
+
 
     <script src="script.js"></script>
 </body>
